tests/integration/snapshots/integration__conformance__n_array_invalid_utf8.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
raw bytes: [91, 255, 93]
stdout ---

stderr ---
error: byte 0xFF would start a sequence of 5 or more bytes
 --> stdin:1:2
  |
1 | [�]
  |  ^
